[package]
name = "img_hashing_bot"
version = "0.1.0"
edition = "2021"
default-run = "bot"

[[bin]]
name = "indexer"
path = "./src/bin/indexer.rs"

[[bin]]
name = "bot"
path = "./src/bin/bot.rs"

[[bin]]
name = "ttest"
path = "./src/bin/tracing_test.rs"


[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
dotenvy = "0.15.0"
dotenvy_macro = "0.15.0"
frankenstein = { version = "0.39.0", features = ["trait-async", "client-reqwest"] }
futures = "0.3.31"
glob = "0.3.1"
image = { version = "0.25.4", default-features = false, features = ["png", "jpeg"]}
image_hasher = "2.0.0"
log = "0.4.25"
opentelemetry = "0.28.0"
opentelemetry-appender-tracing = "0.28.1"
opentelemetry-otlp = {version = "0.28.0", features = ["grpc-tonic"]}
opentelemetry-stdout = "0.28.0"
opentelemetry_sdk = "0.28.0"
quanta = "0.12.5"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.32.1", features = ["functions", "bundled"] }
rust-s3 = "0.35.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.14"
tonic = "0.12.3"
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "std"] }
url = "2.5.4"
