[workspace]
resolver = "2"
members = ["migration"]

[package]
name = "img_hashing_bot"
version = "0.1.0"
edition = "2021"
default-run = "bot"

[[bin]]
name = "indexer"
path = "./src/bin/indexer.rs"

[[bin]]
name = "bot"
path = "./src/bin/bot.rs"

[[bin]]
name = "ttest"
path = "./src/bin/tracing_test.rs"


[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
dotenvy = "0.15.0"
dotenvy_macro = "0.15.0"
frankenstein = { version = "0.45.0", features = ["trait-async", "client-reqwest"] }
futures = "0.3.31"
glob = "0.3.1"
image = { version = "0.25.4", default-features = false, features = ["png", "jpeg"]}
image_hasher = "3.0.0"
log = "0.4.25"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = {version = "0.30.0", features = ["grpc-tonic"]}
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = "0.30.0"
quanta = "0.12.5"
rayon = "1.10.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "stream", "charset", "http2"] }
rusqlite = { version = "0.32.1", features = ["functions", "bundled"] }
rust-s3 = { version = "0.35.1", default-features = false, features = ["with-tokio", "tokio-rustls-tls"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.14"
tonic = "0.13.1"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "std"] }
url = "2.5.4"
migration = { path = "./migration"}
